--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ipsos"
-version = "0.1.0"
+version = "0.0.1"
 authors = ["AnActualEmerald <kevinliger13@gmail.com>"]
 edition = "2018"
 
@@ -8,3 +8,6 @@ edition = "2018"
 
 [dependencies]
 clap = "2.33.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+dirs = "2.0.2"
