--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ipsos"
-version = "0.1.0"
+version = "0.0.1"
 authors = ["AnActualEmerald <kevinliger13@gmail.com>"]
 edition = "2018"
 
@@ -12,3 +12,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dirs = "2.0.2"
 text_io = "0.1.8"
+myanimelist-rs = "0.1.0"
+oauth2 = "3.0.0"
