--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ serde_json = "1.0"
 dirs = "2.0.2"
 text_io = "0.1.8"
 prettytable-rs = "^0.8"
+reqwest = { version = "0.10", features = ["json"] }
+tokio = { version = "0.2", features = ["full"] }
