--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ text_io = "0.1.8"
 prettytable-rs = "^0.8"
 reqwest = { version = "0.10", features = ["json"] }
 tokio = { version = "0.2", features = ["full"] }
+rustyline = "6.3.0"
