--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ipsos"
-version = "0.0.2"
+version = "0.0.3"
 authors = ["AnActualEmerald <kevinliger13@gmail.com>"]
 edition = "2018"
 
@@ -13,3 +13,9 @@ serde_json = "1.0"
 dirs = "2.0.2"
 text_io = "0.1.8"
 prettytable-rs = "^0.8"
+reqwest = { version = "0.10", features = ["json"] }
+tokio = { version = "0.2", features = ["full"] }
+rustyline = "6.3.0"
+termcolor = "1.1.0"
+futures = "0.3.7"
+toml = "*"
